--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Expanding Cards</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="container">
+            <div
+                class="panel"
+                style="
+                    background-image: url('https://images.unsplash.com/photo-1609589636609-6003886b08d4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
+                "
+            >
+                <h3>Explore the world</h3>
+            </div>
+            <div
+                class="panel"
+                style="
+                    background-image: url('https://images.unsplash.com/photo-1609563788314-043525d15860?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
+                "
+            >
+                <h3>Live and Laugh</h3>
+            </div>
+            <div
+                class="panel"
+                style="
+                    background-image: url('https://images.unsplash.com/photo-1609523451717-9a2d7e893eca?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
+                "
+            >
+                <h3>Enjoy the Ride</h3>
+            </div>
+            <div
+                class="panel"
+                style="
+                    background-image: url('https://images.unsplash.com/photo-1609566616550-f19cd750ada8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
+                "
+            >
+                <h3>It's a long Ride</h3>
+            </div>
+            <div
+                class="panel"
+                style="
+                    background-image: url('https://images.unsplash.com/photo-1609541393082-3ccaf569e812?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80');
+                "
+            >
+                <h3>Trust the process</h3>
+            </div>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
